PN-16551 fix update declaredCapacity